--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://papermod-farsi.netlify.app
+baseURL: https://thisisnikzad.pages.dev
 languageCode: 'fa'
 defaultContentLanguage: 'fa'
 title: 'یک قالب وبلاگ'
