--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://thisisnikzad.pages.dev
+baseURL: https://farsitest98.pages.dev
 languageCode: 'fa'
 defaultContentLanguage: 'fa'
 title: 'یک قالب وبلاگ'
