--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,9 @@ languageCode: 'fa'
 defaultContentLanguage: 'fa'
 title: 'یک قالب وبلاگ'
 theme: "PaperMod"
-paginate: 5
+
+pagination:
+  pagerSize: 5
 
 enableRobotsTXT: true
 buildDrafts: false
@@ -12,21 +14,22 @@ buildExpired: false
 
 publishDir: "public"
 
+# اگر بعدا میخوای GA4 استفاده کنی، این رو تغییر بده
 googleAnalytics: UA-123-45
+
 minify:
   disableXML: true
   minifyOutput: true
 
 params:
-  env: production # to enable google analytics, opengraph, twitter-cards and schema.
+  env: production
   title: ExampleSite
   description: "ExampleSite description"
   keywords: [Blog, Portfolio, PaperMod]
   author: Me
-  # author: ["Me", "You"] # multiple authors
   images: ["<link or path of image for opengraph, twitter-cards>"]
   DateFormat: "January 2, 2006"
-  defaultTheme: auto # dark, light
+  defaultTheme: auto
   disableThemeToggle: false
 
   ShowReadingTime: true
@@ -46,8 +49,6 @@ params:
   tocopen: false
 
   assets:
-    # disableHLJS: true # to disable highlight.js
-    # disableFingerprinting: true
     favicon: "<link / abs url>"
     favicon16x16: "<link / abs url>"
     favicon32x32: "<link / abs url>"
@@ -59,9 +60,8 @@ params:
     icon: /apple-touch-icon.png
     iconHeight: 35
 
-  # profile-mode
   profileMode:
-    enabled: false # needs to be explicitly set
+    enabled: false
     title: ExampleSite
     subtitle: "This is subtitle"
     imageUrl: "<img location>"
@@ -74,7 +74,6 @@ params:
       - name: Tags
         url: tags
 
-  # home-info mode
   homeInfoParams:
     Title: سلام امیر پورمند هستم
     Content: >
@@ -97,17 +96,15 @@ params:
       SiteVerificationTag: "XYZabc"
 
   cover:
-    hidden: true # hide everywhere but not in structured data
-    hiddenInList: true # hide on list pages and home
-    hiddenInSingle: true # hide on single page
+    hidden: true
+    hiddenInList: true
+    hiddenInSingle: true
 
   editPost:
     URL: "https://github.com/<path_to_repo>/content"
-    Text: "Suggest Changes" # edit text
-    appendFilePath: true # to append file path to Edit link
+    Text: "Suggest Changes"
+    appendFilePath: true
 
-  # for search
-  # https://fusejs.io/api/options.html
   fuseOpts:
     isCaseSensitive: false
     shouldSort: true
@@ -117,22 +114,13 @@ params:
     minMatchCharLength: 0
     keys: ["title", "permalink", "summary", "content"]
 
-
-# Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 pygmentsUseClasses: true
 markup:
   highlight:
     noClasses: false
-    # anchorLineNos: true
-    # codeFences: true
-    # guessSyntax: true
-    # lineNos: true
-    # style: monokai
 
 permalinks:
-# https://gohugo.io/content-management/urls/
-    posts: "/:filename/"
-    
+  posts: "/:contentbasename/"
 
 menu:
   main:
@@ -146,11 +134,11 @@ menu:
       weight: 30
 
 languages:
-    fa:
-        languageName: "farsi"
-        weight: 1
-        languagedirection: rtl
-        taxonomies:
-          category: categories
-          tag: fatags
-          series: series
+  fa:
+    languageName: "farsi"
+    weight: 1
+    languagedirection: rtl
+    taxonomies:
+      category: categories
+      tag: fatags
+      series: series
